--- a/blatt4/war/MovieManager.html
+++ b/blatt4/war/MovieManager.html
@@ -45,7 +45,7 @@
 
     <table align="center">
       <tr>
-        <td id="content"></td>
+        <td id="SIGNAL"></td>
       </tr>
     </table>
   </body>
