--- a/blatt4/war/MovieManager.html
+++ b/blatt4/war/MovieManager.html
@@ -43,7 +43,7 @@
 
     <h1>MovieManager</h1>
 
-    <table align="center">
+    <table align="void">
       <tr>
         <td id="SIGNAL"></td>
       </tr>
